--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-html
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Upload de Arquivos PDF/PNG/JPEG</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f9fa;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      min-height: 100vh;
+      align-items: center;
+      justify-content: center;
+    }
+    .container {
+      background: #fff;
+      padding: 2em 2.5em;
+      border-radius: 8px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.07);
+      min-width: 320px;
+      max-width: 420px;
+    }
+    h1 {
+      font-size: 1.4em;
+      margin-bottom: 0.5em;
+      text-align: center;
+      font-weight: 600;
+    }
+    p {
+      font-size: 1em;
+      margin-bottom: 1.5em;
+      text-align: center;
+      color: #666;
+    }
+    .file-input {
+      width: 100%;
+      padding: 1em 0;
+      text-align: center;
+    }
+    input[type="file"] {
+      display: none;
+    }
+    label {
+      display: inline-block;
+      background: #007bff;
+      color: #fff;
+      padding: 0.6em 2em;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1em;
+      transition: background 0.2s;
+    }
+    label:hover {
+      background: #0056b3;
+    }
+    .file-list {
+      margin-top: 1em;
+      font-size: 0.97em;
+      color: #444;
+      list-style: none;
+      padding: 0;
+    }
+    .file-list li {
+      padding: 0.3em 0;
+      border-bottom: 1px solid #ebebeb;
+      word-break: break-all;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Upload de Arquivos</h1>
+    <p>Selecione múltiplos arquivos <b>PDF</b>, <b>PNG</b> ou <b>JPEG</b>.</p>
+    <div class="file-input">
+      <label for="fileUpload">Escolher arquivos</label>
+      <input 
+        type="file" 
+        id="fileUpload" 
+        accept=".pdf,image/png,image/jpeg"
+        multiple
+      />
+      <ul id="fileList" class="file-list"></ul>
+    </div>
+  </div>
+  <script>
+    const input = document.getElementById('fileUpload');
+    const fileList = document.getElementById('fileList');
+
+    input.addEventListener('change', function() {
+      fileList.innerHTML = '';
+      for (const file of input.files) {
+        const li = document.createElement('li');
+        li.textContent = `${file.name} (${Math.round(file.size/1024)} KB)`;
+        fileList.appendChild(li);
+      }
+    });
+  </script>
+</body>
+</html>
